# apps.core.preloaded.usb-syspopup

./: AUTHORS  CMakeLists.txt  org.tizen.usb-syspopup.xml  project.config  usb-syspopup.c  usb-syspopup.h
debian/: changelog  control  org.tizen.usb-syspopup.install.in  org.tizen.usb-syspopup.postinst.in  rules
packaging/: org.tizen.usb-syspopup.manifest  org.tizen.usbotg-syspopup.manifest  usb-syspopup.spec
po/: CMakeLists.txt  de_DE.po  el_GR.po  en.po  es_ES.po  fr_FR.po  it_IT.po  ja_JP.po  ko_KR.po  nl_NL.po  pt_PT.po  ru_RU.po  tr_TR.po  zh_CN.po  zh_TW.po
usb-syspopup/: CMakeLists.txt  org.tizen.usb-syspopup.xml  usb-syspopup.c  usb-syspopup.h
usb-syspopup/po/: CMakeLists.txt
usbotg-syspopup/: CMakeLists.txt  org.tizen.usbotg-syspopup.xml
usbotg-syspopup/src/: usbotg-syspopup.c  usbotg-syspopup.h
