CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(SRCS src/usbotg-syspopup.c)

SET(VENDOR "tizen")
SET(PACKAGE "usbotg-syspopup")
SET(PKGNAME "org.${VENDOR}.${PACKAGE}")
SET(PREFIX "${CMAKE_INSTALL_PREFIX}/apps/${PKGNAME}")
SET(BINDIR "${PREFIX}/bin")
SET(RESDIR "${PREFIX}/res")
SET(LOCALEDIR "${RESDIR}/locale")
SET(MANIFESTDIR "${CMAKE_INSTALL_PREFIX}/share/packages")

IF(X11_SUPPORT)
       SET(WIN_PKG "ecore-x")
ENDIF(X11_SUPPORT)
IF(WAYLAND_SUPPORT)
       SET(WIN_PKG "${WIN_PKG} ecore-wayland")
ENDIF(WAYLAND_SUPPORT)
INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED
			appcore-efl
			elementary
			devman
			syspopup
			syspopup-caller
			ecore-evas
			vconf
			appsvc
			dlog
			${WIN_PKG})



FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -O2 -g -Wall")

ADD_DEFINITIONS("-DLOCALEDIR=\"${LOCALEDIR}\"")
ADD_DEFINITIONS("-DPACKAGE=\"${PACKAGE}\"")

IF(X11_SUPPORT)
    ADD_DEFINITIONS("-DHAVE_X11")
ENDIF(X11_SUPPORT)
IF(WAYLAND_SUPPORT)
    ADD_DEFINITIONS("-DHAVE_WAYLAND")
    ADD_DEFINITIONS("-DWAYLAND")
ENDIF(WAYLAND_SUPPORT)

SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed")

ADD_EXECUTABLE(${PACKAGE} ${SRCS})
TARGET_LINK_LIBRARIES(${PACKAGE} syspopup ${pkgs_LDFLAGS})

INSTALL(TARGETS ${PACKAGE} DESTINATION ${BINDIR})

# install icon
INSTALL(FILES ${CMAKE_SOURCE_DIR}/data/usb_icon.png DESTINATION ${RESDIR}/icons/)

# install manifest xml file
INSTALL(FILES ${CMAKE_SOURCE_DIR}/${PACKAGE}/${PKGNAME}.xml DESTINATION ${MANIFESTDIR})
